<resources>
    <string name="app_name">InventoryManager</string>
    <string name="message">message</string>
    <string name="message1">message</string>
    <string name="Description">TextView</string>
    <string name="BrandName">TextView</string>
    <string name="edit">編集</string>
    <string name="details">詳細</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="本日">本日</string>
    <string name="現在">現在</string>

    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
        <!-- Customize your theme here. -->
        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
    </style>
</resources>
